added comment line

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- dygraph -->
     <div id="graphContainer"></div>
     <!--
       This HTML file is a template.
